implemented replaceLine method and covered it with tests